# OpenCogX-Kernel

./: .env.example  .gitignore  README.md  agi_state.db  check_qdrant.py  clear_databases.py  docker-compose.yml  inspect_graph.py  pyproject.toml  quickstart.py  requirements.txt  run_demo.py  test_agi_state.db  test_infra.py  test_learning_eval.py  test_state_naming.py  verify_api.py  verify_fix.py  verify_node.py  verify_system.py  view_databases.py
agi_kernel/: __init__.py  __main__.py  api.py  ingestion.py  kernel.py  learning_loop.py  metrics.py
agi_kernel/core/: __init__.py  goals.py  memory.py  meta.py  reasoning.py  world.py
agi_kernel/plugins/: __init__.py  graph.py  llm.py  persistence.py  vector.py
corpus/: database_replication.md  distributed_systems.md  fault_tolerance.md  stream_processing.md  test.md  time_ordering.md
docs/: Kernel Spec.md  POC.md  Philosophy.md  Whitepaper.md  instructions.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: LogPanel.css  LogPanel.tsx  Sidebar.css  Sidebar.tsx  Toast.css  Toast.tsx  index.ts
frontend/src/pages/: Ask.css  Ask.tsx  Clean.css  Clean.tsx  Dashboard.css  Dashboard.tsx  Evaluate.css  Evaluate.tsx  Goals.css  Goals.tsx  Ingest.css  Ingest.tsx  Learn.css  Learn.tsx  Memory.css  Memory.tsx  Meta.css  Meta.tsx  Settings.css  Settings.tsx  World.css  World.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/stores/: index.ts
tests/: test_core.py  test_e2e.py  test_integration.py  test_reasoning_context.py
